# Kryptofranc

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  install_extra.sh  installer.sh  maker.sh  unix_installer.sh  version_pc  windows_installer.sh
Bitfranc_installer_Unix/: bitcoin_config.h  script_installer_Unix.sh
Bitfranc_installer_Unix/locale/: bitcoin_bs.ts  bitcoin_ca.ts  bitcoin_cs_CZ.ts  bitcoin_cy.ts  bitcoin_en_AU.ts  bitcoin_es_DO.ts  bitcoin_es_MX.ts  bitcoin_es_VE.ts  bitcoin_hr.ts  bitcoin_is.ts  bitcoin_ja.ts  bitcoin_la.ts  bitcoin_nb.ts  bitcoin_pam.ts  bitcoin_pl.ts  bitcoin_pt_BR.ts  bitcoin_pt_PT.ts  bitcoin_sk.ts  bitcoin_sv.ts  bitcoin_th_TH.ts  bitcoin_tr_TR.ts  bitcoin_uk.ts  bitcoin_vi_VN.ts  bitcoin_zh_CN.ts
Bitfranc_installer_Windows/: bitcoin-config.h  readme.md  script-Windows.sh
Bitfranc_installer_Windows/locale/: bitcoin_af_ZA.ts  bitcoin_ar.ts  bitcoin_be_BY.ts  bitcoin_ca_ES.ts  bitcoin_de_DE.ts  bitcoin_en_GB.ts  bitcoin_eo.ts  bitcoin_es_CL.ts  bitcoin_es_CO.ts  bitcoin_eu_ES.ts  bitcoin_fr_FR.ts  bitcoin_hu_HU.ts  bitcoin_id_ID.ts  bitcoin_it.ts  bitcoin_ko_KR.ts  bitcoin_ky.ts  bitcoin_lv_LV.ts  bitcoin_pl_PL.ts  bitcoin_sn.ts  bitcoin_sq.ts  bitcoin_uz@Cyrl.ts  bitcoin_zh_HK.ts
assets/: kyf-qt.desktop  kyf-wallet.desktop
assets_installer/: bfc-amount.h  bfc-chainparams.cpp  bfc-validation.cpp  readme.md  vsftpd.conf  vsftpd.pem
assets_installer/bitfranc_replace/: addressbookpage.cpp  amount.h  askpassphrasedialog.cpp  bitcoin.cpp  bitcoind.cpp  bitcoingui.cpp  blockchain.cpp  chainparams.cpp  chainparamsbase.cpp  db.cpp  editaddressdialog.cpp  feature_help.py  guiutil.cpp  init.cpp  interface_bitcoin_cli.py  intro.cpp  key.cpp  mempool_persist.py  mining.cpp  mininode.py  misc.cpp  net.cpp  net2.cpp  openuridialog.cpp  overviewpage.ui  paymentserver.cpp  pow.cpp  rawtransaction.cpp  rpc_fundrawtransaction.py  rpc_rawtransaction.py  rpcdump.cpp  rpcwallet.cpp  sendcoinsdialog.cpp  server.cpp  util.h  utilitydialog.cpp  validation.cpp  wallet_tests.cpp
assets_installer/kryptofranc_replace/: addressbookpage.cpp  amount.h  askpassphrasedialog.cpp  bitcoin-cli.cpp  bitcoin.cpp  bitcoind.cpp  bitcoingui.cpp  blockchain.cpp  chainparams.cpp  chainparamsbase.cpp  db.cpp  editaddressdialog.cpp  guiutil.cpp  init.cpp  interface_bitcoin_cli.py  intro.cpp  key.cpp  mempool_persist.py  mining.cpp  mininode.py  misc.cpp  net.cpp  net2.cpp  openuridialog.cpp  paymentserver.cpp  pow.cpp  rawtransaction.cpp  rpc_fundrawtransaction.py  rpcdump.cpp  rpcwallet.cpp  sendcoinsdialog.cpp  server.cpp  util.h  utilitydialog.cpp  validation.cpp  wallet_tests.cpp  wallettests.cpp
assets_installer/locale/: bitcoin_af.ts  bitcoin_af_ZA.ts  bitcoin_bg.ts  bitcoin_ca@valencia.ts  bitcoin_ca_ES.ts  bitcoin_cs.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_el_GR.ts  bitcoin_en.ts  bitcoin_en_GB.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_es_419.ts  bitcoin_es_AR.ts  bitcoin_es_CL.ts  bitcoin_es_CO.ts  bitcoin_es_DO.ts  bitcoin_es_ES.ts  bitcoin_es_UY.ts  bitcoin_es_VE.ts  bitcoin_et.ts  bitcoin_et_EE.ts  bitcoin_eu_ES.ts  bitcoin_fa.ts  bitcoin_fa_IR.ts  bitcoin_fi.ts  bitcoin_fr.ts  bitcoin_fr_FR.ts  bitcoin_gl.ts  bitcoin_he.ts  bitcoin_hu.ts  bitcoin_id.ts  bitcoin_it.ts  bitcoin_it_IT.ts  bitcoin_ja.ts  bitcoin_ka.ts  bitcoin_km_KH.ts  bitcoin_lt.ts  (+29 more)
assets_installer/tmp/: addressbookpage.cpp  bitcoin-cli.cpp  bitcoin.cpp  bitcoind.cpp  blockchain.cpp  chainparamsbase.cpp  db.cpp  guiutil.cpp  interface_rest.py  intro.cpp  mempool_persist.py  mining.cpp  modaloverlay.ui  net.cpp  rawtransaction.cpp  rpcwallet.cpp  sendcoinsdialog.cpp  server.cpp  test_runner.py  update-translations.py  util.h  validation.cpp  wallet_tests.cpp  wallettests.cpp
bitcoin/: .travis.yml  README.md
bitcoin/share/: setup.nsi
bitcoin/src/: clientversion.cpp
bitcoin/test/: config.ini
bitcoinmining0121/: CONTRIBUTING.md  README.md  configure.ac
bitcoinmining0121/contrib/: README.md
bitcoinmining0121/depends/: README.md  description.md
bitcoinmining0121/doc/: README.md  REST-interface.md  bips.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  developer-notes.md  files.md  gitian-building.md  init.md  multiwallet-qt.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  unit-tests.md  zmq.md
bitcoinmining0121/qa/: README.md
bitcoinmining0121/src/: Makefile.am  addrman.h  alert.h  amount.cpp  amount.h  arith_uint256.h  base58.cpp  base58.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoind-res.rc  bitcoind.cpp  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  core_write.cpp  dbwrapper.h  hash.h  httprpc.h  httpserver.cpp  httpserver.h  init.cpp  init.h  key.cpp  (+53 more)
bitfranc traduit/bitcoin/: CMakeLists.txt  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  autogen.sh  configure.ac
bitfranccore/: configure.ac
bitfranccore/.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
bitfranccore/contrib/: README.md
bitfranccore/doc/: build-netbsd.md  build-unix.md  developer-notes.md  dnsseed-policy.md  productivity.md  release-process.md
bitfranccore/src/: Makefile.qt.include  addrman.h  chainparamsbase.cpp  chainparamsbase.h  cuckoocache.h  indirectmap.h  key_io.cpp  miner.h  net.h  noui.h  optional.h  prevector.h  psbt.h  reverse_iterator.h  threadinterrupt.h  timedata.h  torcontrol.h  versionbits.h  walletinitinterface.h
dash/src/: clientversion.cpp
db-4.8.30.NC/build_unix/: db_dump  db_load  db_printlog  db_recover  db_stat
kryptofranccore/: .gitignore  .travis.yml  CONTRIBUTING.md  INSTALL.md  Makefile.am  README.md  configure.ac  libbitcoinconsensus.pc.in
kryptofranccore/.github/: ISSUE_TEMPLATE.md
kryptofranccore/.tx/: config
kryptofranccore/build_msvc/: README.md  bitcoin_config.h  (+1 more)
(+1567 files in other folders)
