# cmake_minimum_required(VERSION <specify CMake version here>)
project(bitFranc)

set(CMAKE_CXX_STANDARD 14)

include_directories(assets_installer/bitfranc_replace)
include_directories(bitcoin/build_msvc)
include_directories(bitcoin/src)
include_directories(bitcoin/src/bench)
include_directories(bitcoin/src/compat)
include_directories(bitcoin/src/consensus)
include_directories(bitcoin/src/crypto)
include_directories(bitcoin/src/crypto/ctaes)
include_directories(bitcoin/src/index)
include_directories(bitcoin/src/interfaces)
include_directories(bitcoin/src/leveldb/db)
include_directories(bitcoin/src/leveldb/helpers/memenv)
include_directories(bitcoin/src/leveldb/include)
include_directories(bitcoin/src/leveldb/include/leveldb)
include_directories(bitcoin/src/leveldb/port)
include_directories(bitcoin/src/leveldb/port/win)
include_directories(bitcoin/src/leveldb/table)
include_directories(bitcoin/src/leveldb/util)
include_directories(bitcoin/src/policy)
include_directories(bitcoin/src/primitives)
include_directories(bitcoin/src/qt)
include_directories(bitcoin/src/qt/test)
include_directories(bitcoin/src/rpc)
include_directories(bitcoin/src/script)
include_directories(bitcoin/src/secp256k1/contrib)
include_directories(bitcoin/src/secp256k1/include)
include_directories(bitcoin/src/secp256k1/src)
include_directories(bitcoin/src/secp256k1/src/java)
include_directories(bitcoin/src/secp256k1/src/modules)
include_directories(bitcoin/src/secp256k1/src/modules/ecdh)
include_directories(bitcoin/src/secp256k1/src/modules/recovery)
include_directories(bitcoin/src/support)
include_directories(bitcoin/src/support/allocators)
include_directories(bitcoin/src/test)
include_directories(bitcoin/src/univalue/include)
include_directories(bitcoin/src/univalue/lib)
include_directories(bitcoin/src/wallet)
include_directories(bitcoin/src/wallet/test)
include_directories(bitcoin/src/zmq)

add_executable(bitFranc
        assets_installer/bitfranc_replace/addressbookpage.cpp
        assets_installer/bitfranc_replace/amount.h
        assets_installer/bitfranc_replace/askpassphrasedialog.cpp
        assets_installer/bitfranc_replace/bitcoin-cli.cpp
        assets_installer/bitfranc_replace/bitcoin.cpp
        assets_installer/bitfranc_replace/bitcoind.cpp
        assets_installer/bitfranc_replace/bitcoingui.cpp
        assets_installer/bitfranc_replace/blockchain.cpp
        assets_installer/bitfranc_replace/chainparams.cpp
        assets_installer/bitfranc_replace/chainparamsbase.cpp
        assets_installer/bitfranc_replace/db.cpp
        assets_installer/bitfranc_replace/editaddressdialog.cpp
        assets_installer/bitfranc_replace/guiutil.cpp
        assets_installer/bitfranc_replace/init.cpp
        assets_installer/bitfranc_replace/intro.cpp
        assets_installer/bitfranc_replace/key.cpp
        assets_installer/bitfranc_replace/mining.cpp
        assets_installer/bitfranc_replace/misc.cpp
        assets_installer/bitfranc_replace/net.cpp
        assets_installer/bitfranc_replace/net2.cpp
        assets_installer/bitfranc_replace/openuridialog.cpp
        assets_installer/bitfranc_replace/paymentserver.cpp
        assets_installer/bitfranc_replace/pow.cpp
        assets_installer/bitfranc_replace/rawtransaction.cpp
        assets_installer/bitfranc_replace/rpcdump.cpp
        assets_installer/bitfranc_replace/rpcwallet.cpp
        assets_installer/bitfranc_replace/sendcoinsdialog.cpp
        assets_installer/bitfranc_replace/server.cpp
        assets_installer/bitfranc_replace/util.h
        assets_installer/bitfranc_replace/utilitydialog.cpp
        assets_installer/bitfranc_replace/validation.cpp
        assets_installer/bitfranc_replace/wallet_tests.cpp
        assets_installer/bitfranc_replace/wallettests.cpp
        bitcoin/build_msvc/testconsensus/testconsensus.cpp
        bitcoin/build_msvc/bitcoin_config.h
        bitcoin/src/bench/base58.cpp
        bitcoin/src/bench/bech32.cpp
        bitcoin/src/bench/bench.cpp
        bitcoin/src/bench/bench.h
        bitcoin/src/bench/bench_bitcoin.cpp
        bitcoin/src/bench/block_assemble.cpp
        bitcoin/src/bench/ccoins_caching.cpp
        bitcoin/src/bench/checkblock.cpp
        bitcoin/src/bench/checkqueue.cpp
        bitcoin/src/bench/coin_selection.cpp
        bitcoin/src/bench/crypto_hash.cpp
        bitcoin/src/bench/examples.cpp
        bitcoin/src/bench/gcs_filter.cpp
        bitcoin/src/bench/lockedpool.cpp
        bitcoin/src/bench/mempool_eviction.cpp
        bitcoin/src/bench/merkle_root.cpp
        bitcoin/src/bench/prevector.cpp
        bitcoin/src/bench/rollingbloom.cpp
        bitcoin/src/bench/verify_script.cpp
        bitcoin/src/compat/byteswap.h
        bitcoin/src/compat/endian.h
        bitcoin/src/compat/glibc_compat.cpp
        bitcoin/src/compat/glibc_sanity.cpp
        bitcoin/src/compat/glibcxx_sanity.cpp
        bitcoin/src/compat/sanity.h
        bitcoin/src/compat/strnlen.cpp
        bitcoin/src/consensus/consensus.h
        bitcoin/src/consensus/merkle.cpp
        bitcoin/src/consensus/merkle.h
        bitcoin/src/consensus/params.h
        bitcoin/src/consensus/tx_verify.cpp
        bitcoin/src/consensus/tx_verify.h
        bitcoin/src/consensus/validation.h
        bitcoin/src/crypto/ctaes/bench.c
        bitcoin/src/crypto/ctaes/ctaes.c
        bitcoin/src/crypto/ctaes/ctaes.h
        bitcoin/src/crypto/ctaes/test.c
        bitcoin/src/crypto/aes.cpp
        bitcoin/src/crypto/aes.h
        bitcoin/src/crypto/chacha20.cpp
        bitcoin/src/crypto/chacha20.h
        bitcoin/src/crypto/common.h
        bitcoin/src/crypto/hmac_sha256.cpp
        bitcoin/src/crypto/hmac_sha256.h
        bitcoin/src/crypto/hmac_sha512.cpp
        bitcoin/src/crypto/hmac_sha512.h
        bitcoin/src/crypto/ripemd160.cpp
        bitcoin/src/crypto/ripemd160.h
        bitcoin/src/crypto/sha1.cpp
        bitcoin/src/crypto/sha1.h
        bitcoin/src/crypto/sha256.cpp
        bitcoin/src/crypto/sha256.h
        bitcoin/src/crypto/sha256_avx2.cpp
        bitcoin/src/crypto/sha256_shani.cpp
        bitcoin/src/crypto/sha256_sse4.cpp
        bitcoin/src/crypto/sha256_sse41.cpp
        bitcoin/src/crypto/sha512.cpp
        bitcoin/src/crypto/sha512.h
        bitcoin/src/index/base.cpp
        bitcoin/src/index/base.h
        bitcoin/src/index/txindex.cpp
        bitcoin/src/index/txindex.h
        bitcoin/src/interfaces/handler.cpp
        bitcoin/src/interfaces/handler.h
        bitcoin/src/interfaces/node.cpp
        bitcoin/src/interfaces/node.h
        bitcoin/src/interfaces/wallet.cpp
        bitcoin/src/interfaces/wallet.h
        bitcoin/src/leveldb/db/autocompact_test.cc
        bitcoin/src/leveldb/db/builder.cc
        bitcoin/src/leveldb/db/builder.h
        bitcoin/src/leveldb/db/c.cc
        bitcoin/src/leveldb/db/c_test.c
        bitcoin/src/leveldb/db/corruption_test.cc
        bitcoin/src/leveldb/db/db_bench.cc
        bitcoin/src/leveldb/db/db_impl.cc
        bitcoin/src/leveldb/db/db_impl.h
        bitcoin/src/leveldb/db/db_iter.cc
        bitcoin/src/leveldb/db/db_iter.h
        bitcoin/src/leveldb/db/db_test.cc
        bitcoin/src/leveldb/db/dbformat.cc
        bitcoin/src/leveldb/db/dbformat.h
        bitcoin/src/leveldb/db/dbformat_test.cc
        bitcoin/src/leveldb/db/dumpfile.cc
        bitcoin/src/leveldb/db/fault_injection_test.cc
        bitcoin/src/leveldb/db/filename.cc
        bitcoin/src/leveldb/db/filename.h
        bitcoin/src/leveldb/db/filename_test.cc
        bitcoin/src/leveldb/db/leveldbutil.cc
        bitcoin/src/leveldb/db/log_format.h
        bitcoin/src/leveldb/db/log_reader.cc
        bitcoin/src/leveldb/db/log_reader.h
        bitcoin/src/leveldb/db/log_test.cc
        bitcoin/src/leveldb/db/log_writer.cc
        bitcoin/src/leveldb/db/log_writer.h
        bitcoin/src/leveldb/db/memtable.cc
        bitcoin/src/leveldb/db/memtable.h
        bitcoin/src/leveldb/db/recovery_test.cc
        bitcoin/src/leveldb/db/repair.cc
        bitcoin/src/leveldb/db/skiplist.h
        bitcoin/src/leveldb/db/skiplist_test.cc
        bitcoin/src/leveldb/db/snapshot.h
        bitcoin/src/leveldb/db/table_cache.cc
        bitcoin/src/leveldb/db/table_cache.h
        bitcoin/src/leveldb/db/version_edit.cc
        bitcoin/src/leveldb/db/version_edit.h
        bitcoin/src/leveldb/db/version_edit_test.cc
        bitcoin/src/leveldb/db/version_set.cc
        bitcoin/src/leveldb/db/version_set.h
        bitcoin/src/leveldb/db/version_set_test.cc
        bitcoin/src/leveldb/db/write_batch.cc
        bitcoin/src/leveldb/db/write_batch_internal.h
        bitcoin/src/leveldb/db/write_batch_test.cc
        bitcoin/src/leveldb/doc/bench/db_bench_sqlite3.cc
        bitcoin/src/leveldb/doc/bench/db_bench_tree_db.cc
        bitcoin/src/leveldb/helpers/memenv/memenv.cc
        bitcoin/src/leveldb/helpers/memenv/memenv.h
        bitcoin/src/leveldb/helpers/memenv/memenv_test.cc
        bitcoin/src/leveldb/include/leveldb/c.h
        bitcoin/src/leveldb/include/leveldb/cache.h
        bitcoin/src/leveldb/include/leveldb/comparator.h
        bitcoin/src/leveldb/include/leveldb/db.h
        bitcoin/src/leveldb/include/leveldb/dumpfile.h
        bitcoin/src/leveldb/include/leveldb/env.h
        bitcoin/src/leveldb/include/leveldb/filter_policy.h
        bitcoin/src/leveldb/include/leveldb/iterator.h
        bitcoin/src/leveldb/include/leveldb/options.h
        bitcoin/src/leveldb/include/leveldb/slice.h
        bitcoin/src/leveldb/include/leveldb/status.h
        bitcoin/src/leveldb/include/leveldb/table.h
        bitcoin/src/leveldb/include/leveldb/table_builder.h
        bitcoin/src/leveldb/include/leveldb/write_batch.h
        bitcoin/src/leveldb/issues/issue178_test.cc
        bitcoin/src/leveldb/issues/issue200_test.cc
        bitcoin/src/leveldb/port/win/stdint.h
        bitcoin/src/leveldb/port/atomic_pointer.h
        bitcoin/src/leveldb/port/port.h
        bitcoin/src/leveldb/port/port_example.h
        bitcoin/src/leveldb/port/port_posix.cc
        bitcoin/src/leveldb/port/port_posix.h
        bitcoin/src/leveldb/port/port_posix_sse.cc
        bitcoin/src/leveldb/port/port_win.cc
        bitcoin/src/leveldb/port/port_win.h
        bitcoin/src/leveldb/port/thread_annotations.h
        bitcoin/src/leveldb/table/block.cc
        bitcoin/src/leveldb/table/block.h
        bitcoin/src/leveldb/table/block_builder.cc
        bitcoin/src/leveldb/table/block_builder.h
        bitcoin/src/leveldb/table/filter_block.cc
        bitcoin/src/leveldb/table/filter_block.h
        bitcoin/src/leveldb/table/filter_block_test.cc
        bitcoin/src/leveldb/table/format.cc
        bitcoin/src/leveldb/table/format.h
        bitcoin/src/leveldb/table/iterator.cc
        bitcoin/src/leveldb/table/iterator_wrapper.h
        bitcoin/src/leveldb/table/merger.cc
        bitcoin/src/leveldb/table/merger.h
        bitcoin/src/leveldb/table/table.cc
        bitcoin/src/leveldb/table/table_builder.cc
        bitcoin/src/leveldb/table/table_test.cc
        bitcoin/src/leveldb/table/two_level_iterator.cc
        bitcoin/src/leveldb/table/two_level_iterator.h
        bitcoin/src/leveldb/util/arena.cc
        bitcoin/src/leveldb/util/arena.h
        bitcoin/src/leveldb/util/arena_test.cc
        bitcoin/src/leveldb/util/bloom.cc
        bitcoin/src/leveldb/util/bloom_test.cc
        bitcoin/src/leveldb/util/cache.cc
        bitcoin/src/leveldb/util/cache_test.cc
        bitcoin/src/leveldb/util/coding.cc
        bitcoin/src/leveldb/util/coding.h
        bitcoin/src/leveldb/util/coding_test.cc
        bitcoin/src/leveldb/util/comparator.cc
        bitcoin/src/leveldb/util/crc32c.cc
        bitcoin/src/leveldb/util/crc32c.h
        bitcoin/src/leveldb/util/crc32c_test.cc
        bitcoin/src/leveldb/util/env.cc
        bitcoin/src/leveldb/util/env_posix.cc
        bitcoin/src/leveldb/util/env_posix_test.cc
        bitcoin/src/leveldb/util/env_posix_test_helper.h
        bitcoin/src/leveldb/util/env_test.cc
        bitcoin/src/leveldb/util/env_win.cc
        bitcoin/src/leveldb/util/filter_policy.cc
        bitcoin/src/leveldb/util/hash.cc
        bitcoin/src/leveldb/util/hash.h
        bitcoin/src/leveldb/util/hash_test.cc
        bitcoin/src/leveldb/util/histogram.cc
        bitcoin/src/leveldb/util/histogram.h
        bitcoin/src/leveldb/util/logging.cc
        bitcoin/src/leveldb/util/logging.h
        bitcoin/src/leveldb/util/mutexlock.h
        bitcoin/src/leveldb/util/options.cc
        bitcoin/src/leveldb/util/posix_logger.h
        bitcoin/src/leveldb/util/random.h
        bitcoin/src/leveldb/util/status.cc
        bitcoin/src/leveldb/util/testharness.cc
        bitcoin/src/leveldb/util/testharness.h
        bitcoin/src/leveldb/util/testutil.cc
        bitcoin/src/leveldb/util/testutil.h
        bitcoin/src/policy/feerate.cpp
        bitcoin/src/policy/feerate.h
        bitcoin/src/policy/fees.cpp
        bitcoin/src/policy/fees.h
        bitcoin/src/policy/policy.cpp
        bitcoin/src/policy/policy.h
        bitcoin/src/policy/rbf.cpp
        bitcoin/src/policy/rbf.h
        bitcoin/src/primitives/block.cpp
        bitcoin/src/primitives/block.h
        bitcoin/src/primitives/transaction.cpp
        bitcoin/src/primitives/transaction.h
        bitcoin/src/qt/test/addressbooktests.cpp
        bitcoin/src/qt/test/addressbooktests.h
        bitcoin/src/qt/test/compattests.cpp
        bitcoin/src/qt/test/compattests.h
        bitcoin/src/qt/test/paymentrequestdata.h
        bitcoin/src/qt/test/paymentservertests.cpp
        bitcoin/src/qt/test/paymentservertests.h
        bitcoin/src/qt/test/rpcnestedtests.cpp
        bitcoin/src/qt/test/rpcnestedtests.h
        bitcoin/src/qt/test/test_main.cpp
        bitcoin/src/qt/test/uritests.cpp
        bitcoin/src/qt/test/uritests.h
        bitcoin/src/qt/test/util.cpp
        bitcoin/src/qt/test/util.h
        bitcoin/src/qt/test/wallettests.cpp
        bitcoin/src/qt/test/wallettests.h
        bitcoin/src/qt/addressbookpage.cpp
        bitcoin/src/qt/addressbookpage.h
        bitcoin/src/qt/addresstablemodel.cpp
        bitcoin/src/qt/addresstablemodel.h
        bitcoin/src/qt/askpassphrasedialog.cpp
        bitcoin/src/qt/askpassphrasedialog.h
        bitcoin/src/qt/bantablemodel.cpp
        bitcoin/src/qt/bantablemodel.h
        bitcoin/src/qt/bitcoin.cpp
        bitcoin/src/qt/bitcoinaddressvalidator.cpp
        bitcoin/src/qt/bitcoinaddressvalidator.h
        bitcoin/src/qt/bitcoinamountfield.cpp
        bitcoin/src/qt/bitcoinamountfield.h
        bitcoin/src/qt/bitcoingui.cpp
        bitcoin/src/qt/bitcoingui.h
        bitcoin/src/qt/bitcoinstrings.cpp
        bitcoin/src/qt/bitcoinunits.cpp
        bitcoin/src/qt/bitcoinunits.h
        bitcoin/src/qt/callback.h
        bitcoin/src/qt/clientmodel.cpp
        bitcoin/src/qt/clientmodel.h
        bitcoin/src/qt/coincontroldialog.cpp
        bitcoin/src/qt/coincontroldialog.h
        bitcoin/src/qt/coincontroltreewidget.cpp
        bitcoin/src/qt/coincontroltreewidget.h
        bitcoin/src/qt/csvmodelwriter.cpp
        bitcoin/src/qt/csvmodelwriter.h
        bitcoin/src/qt/editaddressdialog.cpp
        bitcoin/src/qt/editaddressdialog.h
        bitcoin/src/qt/guiconstants.h
        bitcoin/src/qt/guiutil.cpp
        bitcoin/src/qt/guiutil.h
        bitcoin/src/qt/intro.cpp
        bitcoin/src/qt/intro.h
        bitcoin/src/qt/macdockiconhandler.h
        bitcoin/src/qt/macdockiconhandler.mm
        bitcoin/src/qt/macnotificationhandler.h
        bitcoin/src/qt/macnotificationhandler.mm
        bitcoin/src/qt/modaloverlay.cpp
        bitcoin/src/qt/modaloverlay.h
        bitcoin/src/qt/networkstyle.cpp
        bitcoin/src/qt/networkstyle.h
        bitcoin/src/qt/notificator.cpp
        bitcoin/src/qt/notificator.h
        bitcoin/src/qt/openuridialog.cpp
        bitcoin/src/qt/openuridialog.h
        bitcoin/src/qt/optionsdialog.cpp
        bitcoin/src/qt/optionsdialog.h
        bitcoin/src/qt/optionsmodel.cpp
        bitcoin/src/qt/optionsmodel.h
        bitcoin/src/qt/overviewpage.cpp
        bitcoin/src/qt/overviewpage.h
        bitcoin/src/qt/paymentrequestplus.cpp
        bitcoin/src/qt/paymentrequestplus.h
        bitcoin/src/qt/paymentserver.cpp
        bitcoin/src/qt/paymentserver.h
        bitcoin/src/qt/peertablemodel.cpp
        bitcoin/src/qt/peertablemodel.h
        bitcoin/src/qt/platformstyle.cpp
        bitcoin/src/qt/platformstyle.h
        bitcoin/src/qt/qvalidatedlineedit.cpp
        bitcoin/src/qt/qvalidatedlineedit.h
        bitcoin/src/qt/qvaluecombobox.cpp
        bitcoin/src/qt/qvaluecombobox.h
        bitcoin/src/qt/receivecoinsdialog.cpp
        bitcoin/src/qt/receivecoinsdialog.h
        bitcoin/src/qt/receiverequestdialog.cpp
        bitcoin/src/qt/receiverequestdialog.h
        bitcoin/src/qt/recentrequeststablemodel.cpp
        bitcoin/src/qt/recentrequeststablemodel.h
        bitcoin/src/qt/rpcconsole.cpp
        bitcoin/src/qt/rpcconsole.h
        bitcoin/src/qt/sendcoinsdialog.cpp
        bitcoin/src/qt/sendcoinsdialog.h
        bitcoin/src/qt/sendcoinsentry.cpp
        bitcoin/src/qt/sendcoinsentry.h
        bitcoin/src/qt/signverifymessagedialog.cpp
        bitcoin/src/qt/signverifymessagedialog.h
        bitcoin/src/qt/splashscreen.cpp
        bitcoin/src/qt/splashscreen.h
        bitcoin/src/qt/trafficgraphwidget.cpp
        bitcoin/src/qt/trafficgraphwidget.h
        bitcoin/src/qt/transactiondesc.cpp
        bitcoin/src/qt/transactiondesc.h
        bitcoin/src/qt/transactiondescdialog.cpp
        bitcoin/src/qt/transactiondescdialog.h
        bitcoin/src/qt/transactionfilterproxy.cpp
        bitcoin/src/qt/transactionfilterproxy.h
        bitcoin/src/qt/transactionrecord.cpp
        bitcoin/src/qt/transactionrecord.h
        bitcoin/src/qt/transactiontablemodel.cpp
        bitcoin/src/qt/transactiontablemodel.h
        bitcoin/src/qt/transactionview.cpp
        bitcoin/src/qt/transactionview.h
        bitcoin/src/qt/utilitydialog.cpp
        bitcoin/src/qt/utilitydialog.h
        bitcoin/src/qt/walletframe.cpp
        bitcoin/src/qt/walletframe.h
        bitcoin/src/qt/walletmodel.cpp
        bitcoin/src/qt/walletmodel.h
        bitcoin/src/qt/walletmodeltransaction.cpp
        bitcoin/src/qt/walletmodeltransaction.h
        bitcoin/src/qt/walletview.cpp
        bitcoin/src/qt/walletview.h
        bitcoin/src/qt/winshutdownmonitor.cpp
        bitcoin/src/qt/winshutdownmonitor.h
        bitcoin/src/rpc/blockchain.cpp
        bitcoin/src/rpc/blockchain.h
        bitcoin/src/rpc/client.cpp
        bitcoin/src/rpc/client.h
        bitcoin/src/rpc/mining.cpp
        bitcoin/src/rpc/mining.h
        bitcoin/src/rpc/misc.cpp
        bitcoin/src/rpc/net.cpp
        bitcoin/src/rpc/protocol.cpp
        bitcoin/src/rpc/protocol.h
        bitcoin/src/rpc/rawtransaction.cpp
        bitcoin/src/rpc/rawtransaction.h
        bitcoin/src/rpc/register.h
        bitcoin/src/rpc/server.cpp
        bitcoin/src/rpc/server.h
        bitcoin/src/rpc/util.cpp
        bitcoin/src/rpc/util.h
        bitcoin/src/script/bitcoinconsensus.cpp
        bitcoin/src/script/bitcoinconsensus.h
        bitcoin/src/script/descriptor.cpp
        bitcoin/src/script/descriptor.h
        bitcoin/src/script/interpreter.cpp
        bitcoin/src/script/interpreter.h
        bitcoin/src/script/ismine.cpp
        bitcoin/src/script/ismine.h
        bitcoin/src/script/script.cpp
        bitcoin/src/script/script.h
        bitcoin/src/script/script_error.cpp
        bitcoin/src/script/script_error.h
        bitcoin/src/script/sigcache.cpp
        bitcoin/src/script/sigcache.h
        bitcoin/src/script/sign.cpp
        bitcoin/src/script/sign.h
        bitcoin/src/script/standard.cpp
        bitcoin/src/script/standard.h
        bitcoin/src/secp256k1/contrib/lax_der_parsing.c
        bitcoin/src/secp256k1/contrib/lax_der_parsing.h
        bitcoin/src/secp256k1/contrib/lax_der_privatekey_parsing.c
        bitcoin/src/secp256k1/contrib/lax_der_privatekey_parsing.h
        bitcoin/src/secp256k1/include/secp256k1.h
        bitcoin/src/secp256k1/include/secp256k1_ecdh.h
        bitcoin/src/secp256k1/include/secp256k1_recovery.h
        bitcoin/src/secp256k1/src/java/org_bitcoin_NativeSecp256k1.c
        bitcoin/src/secp256k1/src/java/org_bitcoin_NativeSecp256k1.h
        bitcoin/src/secp256k1/src/java/org_bitcoin_Secp256k1Context.c
        bitcoin/src/secp256k1/src/java/org_bitcoin_Secp256k1Context.h
        bitcoin/src/secp256k1/src/modules/ecdh/main_impl.h
        bitcoin/src/secp256k1/src/modules/ecdh/tests_impl.h
        bitcoin/src/secp256k1/src/modules/recovery/main_impl.h
        bitcoin/src/secp256k1/src/modules/recovery/tests_impl.h
        bitcoin/src/secp256k1/src/basic-config.h
        bitcoin/src/secp256k1/src/bench.h
        bitcoin/src/secp256k1/src/bench_ecdh.c
        bitcoin/src/secp256k1/src/bench_internal.c
        bitcoin/src/secp256k1/src/bench_recover.c
        bitcoin/src/secp256k1/src/bench_sign.c
        bitcoin/src/secp256k1/src/bench_verify.c
        bitcoin/src/secp256k1/src/ecdsa.h
        bitcoin/src/secp256k1/src/ecdsa_impl.h
        bitcoin/src/secp256k1/src/eckey.h
        bitcoin/src/secp256k1/src/eckey_impl.h
        bitcoin/src/secp256k1/src/ecmult.h
        bitcoin/src/secp256k1/src/ecmult_const.h
        bitcoin/src/secp256k1/src/ecmult_const_impl.h
        bitcoin/src/secp256k1/src/ecmult_gen.h
        bitcoin/src/secp256k1/src/ecmult_gen_impl.h
        bitcoin/src/secp256k1/src/ecmult_impl.h
        bitcoin/src/secp256k1/src/field.h
        bitcoin/src/secp256k1/src/field_10x26.h
        bitcoin/src/secp256k1/src/field_10x26_impl.h
        bitcoin/src/secp256k1/src/field_5x52.h
        bitcoin/src/secp256k1/src/field_5x52_asm_impl.h
        bitcoin/src/secp256k1/src/field_5x52_impl.h
        bitcoin/src/secp256k1/src/field_5x52_int128_impl.h
        bitcoin/src/secp256k1/src/field_impl.h
        bitcoin/src/secp256k1/src/gen_context.c
        bitcoin/src/secp256k1/src/group.h
        bitcoin/src/secp256k1/src/group_impl.h
        bitcoin/src/secp256k1/src/hash.h
        bitcoin/src/secp256k1/src/hash_impl.h
        bitcoin/src/secp256k1/src/num.h
        bitcoin/src/secp256k1/src/num_gmp.h
        bitcoin/src/secp256k1/src/num_gmp_impl.h
        bitcoin/src/secp256k1/src/num_impl.h
        bitcoin/src/secp256k1/src/scalar.h
        bitcoin/src/secp256k1/src/scalar_4x64.h
        bitcoin/src/secp256k1/src/scalar_4x64_impl.h
        bitcoin/src/secp256k1/src/scalar_8x32.h
        bitcoin/src/secp256k1/src/scalar_8x32_impl.h
        bitcoin/src/secp256k1/src/scalar_impl.h
        bitcoin/src/secp256k1/src/scalar_low.h
        bitcoin/src/secp256k1/src/scalar_low_impl.h
        bitcoin/src/secp256k1/src/secp256k1.c
        bitcoin/src/secp256k1/src/testrand.h
        bitcoin/src/secp256k1/src/testrand_impl.h
        bitcoin/src/secp256k1/src/tests.c
        bitcoin/src/secp256k1/src/tests_exhaustive.c
        bitcoin/src/secp256k1/src/util.h
        bitcoin/src/support/allocators/secure.h
        bitcoin/src/support/allocators/zeroafterfree.h
        bitcoin/src/support/cleanse.cpp
        bitcoin/src/support/cleanse.h
        bitcoin/src/support/events.h
        bitcoin/src/support/lockedpool.cpp
        bitcoin/src/support/lockedpool.h
        bitcoin/src/test/addrman_tests.cpp
        bitcoin/src/test/allocator_tests.cpp
        bitcoin/src/test/amount_tests.cpp
        bitcoin/src/test/arith_uint256_tests.cpp
        bitcoin/src/test/base32_tests.cpp
        bitcoin/src/test/base58_tests.cpp
        bitcoin/src/test/base64_tests.cpp
        bitcoin/src/test/bech32_tests.cpp
        bitcoin/src/test/bip32_tests.cpp
        bitcoin/src/test/blockchain_tests.cpp
        bitcoin/src/test/blockencodings_tests.cpp
        bitcoin/src/test/blockfilter_tests.cpp
        bitcoin/src/test/bloom_tests.cpp
        bitcoin/src/test/bswap_tests.cpp
        bitcoin/src/test/checkqueue_tests.cpp
        bitcoin/src/test/coins_tests.cpp
        bitcoin/src/test/compress_tests.cpp
        bitcoin/src/test/crypto_tests.cpp
        bitcoin/src/test/cuckoocache_tests.cpp
        bitcoin/src/test/dbwrapper_tests.cpp
        bitcoin/src/test/denialofservice_tests.cpp
        bitcoin/src/test/descriptor_tests.cpp
        bitcoin/src/test/getarg_tests.cpp
        bitcoin/src/test/hash_tests.cpp
        bitcoin/src/test/key_io_tests.cpp
        bitcoin/src/test/key_tests.cpp
        bitcoin/src/test/limitedmap_tests.cpp
        bitcoin/src/test/main_tests.cpp
        bitcoin/src/test/mempool_tests.cpp
        bitcoin/src/test/merkle_tests.cpp
        bitcoin/src/test/merkleblock_tests.cpp
        bitcoin/src/test/miner_tests.cpp
        bitcoin/src/test/multisig_tests.cpp
        bitcoin/src/test/net_tests.cpp
        bitcoin/src/test/netbase_tests.cpp
        bitcoin/src/test/pmt_tests.cpp
        bitcoin/src/test/policyestimator_tests.cpp
        bitcoin/src/test/pow_tests.cpp
        bitcoin/src/test/prevector_tests.cpp
        bitcoin/src/test/raii_event_tests.cpp
        bitcoin/src/test/random_tests.cpp
        bitcoin/src/test/reverselock_tests.cpp
        bitcoin/src/test/rpc_tests.cpp
        bitcoin/src/test/sanity_tests.cpp
        bitcoin/src/test/scheduler_tests.cpp
        bitcoin/src/test/script_p2sh_tests.cpp
        bitcoin/src/test/script_standard_tests.cpp
        bitcoin/src/test/script_tests.cpp
        bitcoin/src/test/scriptnum10.h
        bitcoin/src/test/scriptnum_tests.cpp
        bitcoin/src/test/serialize_tests.cpp
        bitcoin/src/test/sighash_tests.cpp
        bitcoin/src/test/sigopcount_tests.cpp
        bitcoin/src/test/skiplist_tests.cpp
        bitcoin/src/test/streams_tests.cpp
        bitcoin/src/test/sync_tests.cpp
        bitcoin/src/test/test_bitcoin.cpp
        bitcoin/src/test/test_bitcoin.h
        bitcoin/src/test/test_bitcoin_fuzzy.cpp
        bitcoin/src/test/test_bitcoin_main.cpp
        bitcoin/src/test/timedata_tests.cpp
        bitcoin/src/test/torcontrol_tests.cpp
        bitcoin/src/test/transaction_tests.cpp
        bitcoin/src/test/txindex_tests.cpp
        bitcoin/src/test/txvalidation_tests.cpp
        bitcoin/src/test/txvalidationcache_tests.cpp
        bitcoin/src/test/uint256_tests.cpp
        bitcoin/src/test/util_tests.cpp
        bitcoin/src/test/validation_block_tests.cpp
        bitcoin/src/test/versionbits_tests.cpp
        bitcoin/src/univalue/gen/gen.cpp
        bitcoin/src/univalue/include/univalue.h
        bitcoin/src/univalue/lib/univalue.cpp
        bitcoin/src/univalue/lib/univalue_escapes.h
        bitcoin/src/univalue/lib/univalue_get.cpp
        bitcoin/src/univalue/lib/univalue_read.cpp
        bitcoin/src/univalue/lib/univalue_utffilter.h
        bitcoin/src/univalue/lib/univalue_write.cpp
        bitcoin/src/univalue/test/no_nul.cpp
        bitcoin/src/univalue/test/object.cpp
        bitcoin/src/univalue/test/test_json.cpp
        bitcoin/src/univalue/test/unitester.cpp
        bitcoin/src/wallet/test/coinselector_tests.cpp
        bitcoin/src/wallet/test/psbt_wallet_tests.cpp
        bitcoin/src/wallet/test/wallet_crypto_tests.cpp
        bitcoin/src/wallet/test/wallet_test_fixture.cpp
        bitcoin/src/wallet/test/wallet_test_fixture.h
        bitcoin/src/wallet/test/wallet_tests.cpp
        bitcoin/src/wallet/coincontrol.cpp
        bitcoin/src/wallet/coincontrol.h
        bitcoin/src/wallet/coinselection.cpp
        bitcoin/src/wallet/coinselection.h
        bitcoin/src/wallet/crypter.cpp
        bitcoin/src/wallet/crypter.h
        bitcoin/src/wallet/db.cpp
        bitcoin/src/wallet/db.h
        bitcoin/src/wallet/feebumper.cpp
        bitcoin/src/wallet/feebumper.h
        bitcoin/src/wallet/fees.cpp
        bitcoin/src/wallet/fees.h
        bitcoin/src/wallet/init.cpp
        bitcoin/src/wallet/rpcdump.cpp
        bitcoin/src/wallet/rpcwallet.cpp
        bitcoin/src/wallet/rpcwallet.h
        bitcoin/src/wallet/wallet.cpp
        bitcoin/src/wallet/wallet.h
        bitcoin/src/wallet/walletdb.cpp
        bitcoin/src/wallet/walletdb.h
        bitcoin/src/wallet/walletutil.cpp
        bitcoin/src/wallet/walletutil.h
        bitcoin/src/zmq/zmqabstractnotifier.cpp
        bitcoin/src/zmq/zmqabstractnotifier.h
        bitcoin/src/zmq/zmqconfig.h
        bitcoin/src/zmq/zmqnotificationinterface.cpp
        bitcoin/src/zmq/zmqnotificationinterface.h
        bitcoin/src/zmq/zmqpublishnotifier.cpp
        bitcoin/src/zmq/zmqpublishnotifier.h
        bitcoin/src/zmq/zmqrpc.cpp
        bitcoin/src/zmq/zmqrpc.h
        bitcoin/src/addrdb.cpp
        bitcoin/src/addrdb.h
        bitcoin/src/addrman.cpp
        bitcoin/src/addrman.h
        bitcoin/src/amount.h
        bitcoin/src/arith_uint256.cpp
        bitcoin/src/arith_uint256.h
        bitcoin/src/base58.cpp
        bitcoin/src/base58.h
        bitcoin/src/bech32.cpp
        bitcoin/src/bech32.h
        bitcoin/src/bitcoin-cli.cpp
        bitcoin/src/bitcoin-tx.cpp
        bitcoin/src/bitcoind.cpp
        bitcoin/src/blockencodings.cpp
        bitcoin/src/blockencodings.h
        bitcoin/src/blockfilter.cpp
        bitcoin/src/blockfilter.h
        bitcoin/src/bloom.cpp
        bitcoin/src/bloom.h
        bitcoin/src/chain.cpp
        bitcoin/src/chain.h
        bitcoin/src/chainparams.cpp
        bitcoin/src/chainparams.h
        bitcoin/src/chainparamsbase.cpp
        bitcoin/src/chainparamsbase.h
        bitcoin/src/chainparamsseeds.h
        bitcoin/src/checkpoints.cpp
        bitcoin/src/checkpoints.h
        bitcoin/src/checkqueue.h
        bitcoin/src/clientversion.cpp
        bitcoin/src/clientversion.h
        bitcoin/src/coins.cpp
        bitcoin/src/coins.h
        bitcoin/src/compat.h
        bitcoin/src/compressor.cpp
        bitcoin/src/compressor.h
        bitcoin/src/core_io.h
        bitcoin/src/core_memusage.h
        bitcoin/src/core_read.cpp
        bitcoin/src/core_write.cpp
        bitcoin/src/cuckoocache.h
        bitcoin/src/dbwrapper.cpp
        bitcoin/src/dbwrapper.h
        bitcoin/src/fs.cpp
        bitcoin/src/fs.h
        bitcoin/src/hash.cpp
        bitcoin/src/hash.h
        bitcoin/src/httprpc.cpp
        bitcoin/src/httprpc.h
        bitcoin/src/httpserver.cpp
        bitcoin/src/httpserver.h
        bitcoin/src/indirectmap.h
        bitcoin/src/init.cpp
        bitcoin/src/init.h
        bitcoin/src/key.cpp
        bitcoin/src/key.h
        bitcoin/src/key_io.cpp
        bitcoin/src/key_io.h
        bitcoin/src/keystore.cpp
        bitcoin/src/keystore.h
        bitcoin/src/limitedmap.h
        bitcoin/src/logging.cpp
        bitcoin/src/logging.h
        bitcoin/src/memusage.h
        bitcoin/src/merkleblock.cpp
        bitcoin/src/merkleblock.h
        bitcoin/src/miner.cpp
        bitcoin/src/miner.h
        bitcoin/src/net.cpp
        bitcoin/src/net.h
        bitcoin/src/net_processing.cpp
        bitcoin/src/net_processing.h
        bitcoin/src/netaddress.cpp
        bitcoin/src/netaddress.h
        bitcoin/src/netbase.cpp
        bitcoin/src/netbase.h
        bitcoin/src/netmessagemaker.h
        bitcoin/src/noui.cpp
        bitcoin/src/noui.h
        bitcoin/src/outputtype.cpp
        bitcoin/src/outputtype.h
        bitcoin/src/pow.cpp
        bitcoin/src/pow.h
        bitcoin/src/prevector.h
        bitcoin/src/protocol.cpp
        bitcoin/src/protocol.h
        bitcoin/src/pubkey.cpp
        bitcoin/src/pubkey.h
        bitcoin/src/random.cpp
        bitcoin/src/random.h
        bitcoin/src/rest.cpp
        bitcoin/src/reverse_iterator.h
        bitcoin/src/reverselock.h
        bitcoin/src/scheduler.cpp
        bitcoin/src/scheduler.h
        bitcoin/src/serialize.h
        bitcoin/src/shutdown.cpp
        bitcoin/src/shutdown.h
        bitcoin/src/span.h
        bitcoin/src/streams.h
        bitcoin/src/sync.cpp
        bitcoin/src/sync.h
        bitcoin/src/threadinterrupt.cpp
        bitcoin/src/threadinterrupt.h
        bitcoin/src/threadsafety.h
        bitcoin/src/timedata.cpp
        bitcoin/src/timedata.h
        bitcoin/src/tinyformat.h
        bitcoin/src/torcontrol.cpp
        bitcoin/src/torcontrol.h
        bitcoin/src/txdb.cpp
        bitcoin/src/txdb.h
        bitcoin/src/txmempool.cpp
        bitcoin/src/txmempool.h
        bitcoin/src/ui_interface.cpp
        bitcoin/src/ui_interface.h
        bitcoin/src/uint256.cpp
        bitcoin/src/uint256.h
        bitcoin/src/undo.h
        bitcoin/src/util.cpp
        bitcoin/src/util.h
        bitcoin/src/utilmemory.h
        bitcoin/src/utilmoneystr.cpp
        bitcoin/src/utilmoneystr.h
        bitcoin/src/utilstrencodings.cpp
        bitcoin/src/utilstrencodings.h
        bitcoin/src/utiltime.cpp
        bitcoin/src/utiltime.h
        bitcoin/src/validation.cpp
        bitcoin/src/validation.h
        bitcoin/src/validationinterface.cpp
        bitcoin/src/validationinterface.h
        bitcoin/src/version.h
        bitcoin/src/versionbits.cpp
        bitcoin/src/versionbits.h
        bitcoin/src/walletinitinterface.h
        bitcoin/src/warnings.cpp
        bitcoin/src/warnings.h)
